# AWSSDK

./: CMakeLists.txt  README.md
CMake/Modules/: FindCURL.cmake  FindIconv.cmake  FindLibXml2.cmake  FindOpenSSL.cmake
examples/SQSTest/: TestMessage.cpp  TestMessage.h  TestMessageContext.cpp  TestMessageContext.h  TestMessageError.cpp  TestMessageError.h  TestMessageHandshake.cpp  TestMessageHandshake.h  TestMessageReader.cpp  TestMessageReader.h  TestMessageWriter.cpp  TestMessageWriter.h  main.cpp
src/AWS/: AWS.h  AWSClient.cpp  AWSClient.h  AWSClientFactory.cpp  AWSClientFactory.h  AWSHttpClient.cpp  AWSHttpClient.h  AWSHttpRequest.h  AWSHttpResponse.h  AWSRegion.cpp  AWSRegion.h  AWSResult.cpp  AWSResult.h  AWSSigner.cpp  AWSSigner.h  HttpClient.cpp  HttpClient.h  HttpUtils.cpp  HttpUtils.h  S3Client.cpp  S3Client.h  SQSClient.cpp  SQSClient.h  SQSModel.h  SQSParams.cpp  SQSParams.h  SQSResult.cpp  SQSResult.h
src/Foundation/: ArrayList.h  Buffer.h  DateTime.cpp  DateTime.h  Foundation.h  HashMap.h  HashTraits.h  Holder.h  LinkedList.h  Lock.cpp  Lock.h  Logger.cpp  Logger.h  REF.cpp  REF.h  REFAutoreleasePool.cpp  REFAutoreleasePool.h  SortTraits.h  StringT.h  StringTraits.cpp  StringTraits.h  TreeMap.h
src/IO/: BufferedWriter.cpp  BufferedWriter.h  IO.h  StdFileReader.cpp  StdFileReader.h  StdFileWriter.cpp  StdFileWriter.h  StringReader.cpp  StringReader.h  StringWriter.cpp  StringWriter.h  TextReader.cpp  TextReader.h  TextWriter.cpp  TextWriter.h
src/JSON/: JSON.h  JSONCast.h  JSONNode.cpp  JSONNode.h  JSONReader.cpp  JSONReader.h  JSONWriter.cpp  JSONWriter.h
